assets/styles/blockquote.less
.content blockquote {
  padding-left: 1em;
  border-left: 1px solid white;
}

.content blockquote cite {
  display: block;
  font-style: normal;
  text-indent: 1em;
}

.content blockquote cite::before {
  content: "- ";
}

.content aside {
  float: right;
  width: 30%;
  padding-left: 1em;
  font-size: 0.8em;
  color: #a8a8a8;
}

.content aside p.break {
  font-size: 2em;
  text-align: center;
  margin-top: -0.9em;
  margin-bottom: 0;
}

.content aside p.break::before {
  content: '❧';
}

